# Cordium

./: .gitignore  Cargo.toml  README.md  config-example.toml  default.nix  shell.nix
nix/: pkgs.nix  sources.json
src/: main.glade  main.rs
src/config/: mod.rs
