[package]
name = "cordium"
version = "0.1.0"
authors = ["pietdevries94 <piet@devries.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
glib = "0.10.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.webkit2gtk]
version = "0.10.0"
features = ["v2_16"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
